# Argentina-Open-Data

./: README.md  pyproject.toml  settings.ini
challenge/: cfg.py  constants.py  extractors.py  loaders.py  main.py  script.py  tempCodeRunnerFile.py
challenge/sql/: cine_insights.sql  raw.sql  size_by_category.sql  size_by_datasource.sql  size_by_prov_cat.sql
notebook/: data_exploratory.ipynb
