[tool.poetry]
name = "argentina-challenge-data-analytics"
version = "1.0.0"
description = "challenge"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
